--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ html{
     display: block;
     border-radius: 50%;
     margin: auto;
+    animation: move-wheel .5s linear infinite;
 }
 
 .arrow span{
@@ -50,4 +51,15 @@ html{
     border-right-color: rgb(143, 214, 12);
     border-bottom-color: rgb(143, 214, 12);
     transform: rotate(45de);
+}
+
+@keyframes move-wheel {
+    0%{
+        opacity: 0%;
+        transform: translateY(-1rem);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(1rem);
+           }
 }
